--- a/index.html
+++ b/index.html
@@ -83,12 +83,8 @@
                     </div>
                 </div>
                 <div class="action-container text-center mt-4">
-                    <a href="https://www.pensanoevento.com.br/juice" target="_blank"
-                        class="btn btn-primary btn-lg btn-buy">COMPRAR INGRESSO</a>
-                    <div class="mt-2">
-                        <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0" target="_blank"
-                            target="_blank" style="text-decoration: underline; color: white;">
-                            PROCURANDO UMA RESERVA? CHAMA AQUI!
+                    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0" target="_blank"
+                        class="btn btn-primary btn-lg btn-buy">RESERVAS</a>
                         </a>
                     </div>
                 </div>
@@ -146,7 +142,7 @@
                     <div class="accordion-item">
                         <button class="accordion-header">Qual o horário de abertura?</button>
                         <div class="accordion-content">
-                            <p>22:00 horas</p>
+                            <p>23:00 horas</p>
                         </div>
                     </div>
                     <div class="accordion-item">
