--- a/index.html
+++ b/index.html
@@ -82,10 +82,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="action-container text-center mt-4">
-                    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0" target="_blank"
-                        class="btn btn-primary btn-lg btn-buy">RESERVAS</a>
-                        </a>
+               <div class="action-container text-center mt-4">
+
+    <p class="reserva-call">
+        QUE TAL UM CAMAROTE, MESA NA PISTA OU BACKSTAGE?
+    </p>
+
+    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0"
+       target="_blank"
+       class="btn btn-primary btn-lg btn-buy">
+        RESERVAS
+    </a>
                     </div>
                 </div>
             </div>
