--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                <div class="action-container text-center mt-4">
 
     <p class="reserva-call">
-        QUE TAL UM CAMAROTE, MESA NA PISTA OU BACKSTAGE?
+        QUE TAL UM CAMAROTE,<br>
+        MESA NA PISTA OU BACKSTAGE?
     </p>
 
     <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0"
