--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="cursor-glow"></div>
     <header id="header">
         <div class="container header-content">
-            <a href="#" class="logo-link"><img src="assets/img/juice-cup.png" alt="Juice Logo" class="header-logo"></a>
+            <a href="#" class="logo-link"><img src="assets/img/juice-cup.webp" alt="Juice Logo" class="header-logo"></a>
             <nav class="desktop-nav">
                 <a href="#programacao">Programação</a>
                 <a href="#destaques">Localização</a>
