--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
                     target="_blank">Fale Conosco</a>
                 <a href="politica-privacidade.html">Política de Privacidade</a>
                 <span>© 2024 Juice. Todos os direitos reservados.</span>
+                <div class="dev-label-container gruv-button-wrapper">
+                    <span>Desenvolvido por</span>
+                    <a href="https://gruvlabel.com" target="_blank" rel="noopener noreferrer" class="gruv-button">
+                        <div>GRÜV</div>
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
