--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -57,15 +57,15 @@
                 <h1>IT'S JUICE BABY!</h1>
                 <p>HIP-HOP, FUNK E MEGAFUNK.</p>
                 <div class="hero-btns">
-    <a href="https://www.pensanoevento.com.br/juice" target="_blank" 
-       class="btn btn-primary btn-lg">INGRESSOS</a>
-    
-    <a href="https://www.pensanoevento.com.br/sitev2/nomenalista/95103/juice" target="_blank" 
-       class="btn btn-outline btn-lg">LISTA VIP</a>
-    
-    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+para+comemorar+meu+aniversário+na+*JUICE*!&type=phone_number&app_absent=0" target="_blank" 
-       class="btn btn-primary btn-lg">ANIVERSÁRIO</a>
-</div>
+                    <a href="https://www.pensanoevento.com.br/juice" target="_blank"
+                        class="btn btn-primary btn-lg">INGRESSOS</a>
+
+                    <a href="https://www.pensanoevento.com.br/sitev2/nomenalista/95103/juice" target="_blank"
+                        class="btn btn-outline btn-lg">LISTA VIP</a>
+
+                    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+para+comemorar+meu+aniversário+na+*JUICE*!&type=phone_number&app_absent=0"
+                        target="_blank" class="btn btn-primary btn-lg">ANIVERSÁRIO</a>
+                </div>
             </div>
         </section>
 
@@ -87,20 +87,19 @@
                         </div>
                     </div>
                 </div>
-               <div class="action-container text-center mt-4">
+                <div class="action-container text-center mt-4">
 
-    <p class="reserva-call">
-        QUE TAL UM CAMAROTE,<br>
-        MESA NA PISTA OU BACKSTAGE?
-    </p>
+                    <p class="reserva-call">
+                        QUE TAL UM CAMAROTE,<br>
+                        MESA NA PISTA OU BACKSTAGE?
+                    </p>
 
-    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0"
-       target="_blank"
-       class="btn btn-primary btn-lg btn-buy">
-        RESERVAS
-    </a>
-                    </div>
+                    <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+gostaria+de+fazer+uma+reserva+na+*JUICE*!&type=phone_number&app_absent=0"
+                        target="_blank" class="btn btn-primary btn-lg btn-buy">
+                        RESERVAS
+                    </a>
                 </div>
+            </div>
             </div>
         </section>
 
@@ -125,7 +124,11 @@
             <div class="container history-grid">
                 <div class="history-text">
                     <h2>NOSSA HISTÓRIA</h2>
-                    <p>Direto da cena noturna de Joinville, JUICE se consolidou como uma das principais referências da vida noturna da cidade. Com uma curadoria musical que mistura ritmos e uma experiência que evolui a cada edição, a festa atrai um público fiel e cada vez maior. Realizada regularmente na LOFI 220, a Juice entrega noites intensas, pistas cheias e celebrações memoráveis que reforçam sua identidade, longevidade e conexão real com o público.</p>
+                    <p>Direto da cena noturna de Joinville, JUICE se consolidou como uma das principais referências da
+                        vida noturna da cidade. Com uma curadoria musical que mistura ritmos e uma experiência que
+                        evolui a cada edição, a festa atrai um público fiel e cada vez maior. Realizada regularmente na
+                        LOFI 220, a Juice entrega noites intensas, pistas cheias e celebrações memoráveis que reforçam
+                        sua identidade, longevidade e conexão real com o público.</p>
                     <div class="history-photos-container">
                         <div class="polaroid-card"><img src="assets/img/historia/party1.webp" alt="Juice Party Crowd">
                         </div>
@@ -183,13 +186,13 @@
                 <a href="https://api.whatsapp.com/send/?phone=5547992205585&text=Ol%C3%A1,+tudo+bom?&type=phone_number&app_absent=0"
                     target="_blank">Fale Conosco</a>
                 <a href="politica-privacidade.html">Política de Privacidade</a>
-                <span>© 2024 Juice. Todos os direitos reservados.</span>
-                <div class="dev-label-container gruv-button-wrapper">
+                <div class="dev-label-container gruv-button-wrapper" style="margin-bottom: 0.5rem; margin-top: 0;">
                     <span>Desenvolvido por</span>
                     <a href="https://gruvlabel.com" target="_blank" rel="noopener noreferrer" class="gruv-button">
                         <div>GRÜV</div>
                     </a>
                 </div>
+                <span>© 2024 Juice. Todos os direitos reservados.</span>
             </div>
         </div>
     </footer>
